--- a/app/src/main/res/layout/activity_emp_status.xml
+++ b/app/src/main/res/layout/activity_emp_status.xml
@@ -5,8 +5,24 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="mywork.attendance_system.Emp_status">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/Text"
+        android:padding="20dp"
+        android:text="Makers At Garage"
+        android:textColor="#ff1a823f"
+        android:textSize="20dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listv"
+        android:layout_below="@id/Text"
+        android:choiceMode="singleChoice" />
+
+
 
 </RelativeLayout>
