--- a/app/src/main/res/layout/activity_emp_status.xml
+++ b/app/src/main/res/layout/activity_emp_status.xml
@@ -1,28 +1,41 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="mywork.attendance_system.Emp_status">
+    tools:context="mywork.attendance_system.Emp_status"
+    android:orientation="vertical">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/Text"
-        android:padding="20dp"
+        android:padding="15dp"
         android:text="Makers At Garage"
         android:textColor="#ff1a823f"
-        android:textSize="20dp"
+        android:textSize="25dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
     <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
         android:id="@+id/listv"
         android:layout_below="@id/Text"
         android:choiceMode="singleChoice" />
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:text="SUBMIT"
+        android:textSize="20dp"
+        android:id="@+id/B"
+        android:clickable="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 
-</RelativeLayout>
+
+</LinearLayout>
